improved code, made code compilable
- using named parameters now
- named method in context style, not query style
- using List.of() now instead of Collections.emptyList()
- Injected mocks into tests